# FlexWrfOutput

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ci/: environment.yml  environment_ci.yml
flexwrfoutput/: __init__.py  accessors.py  add_wrf_projection.py  openfiles.py  postprocess.py
tests/: test_accessors.py  test_integration.py  test_openfiles.py  test_postprocess.py
tests/file_examples/: flxout_degree.nc  header_degree.nc
tests/file_examples/meter/: flxout_meters.nc  header_meters.nc
