[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | file_examples
  | LICENSE
)/
'''
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "flexwrfoutput"
version = "0.1.0"
description = ""
authors = ["Christopher Lüken-Winkels <christopher.lueken.winkels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xwrf = "^0.0.2"
netcdf4 = "^1.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
